# std-uritemplate

./: .gitignore  .gitmodules  Contributing.md  Readme.md  release.sh
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: codeql.yml  dependabot-autoapprove.yaml  dependabot-automerge.yaml  gen-sn.yml  release-java.yml  release-typescript.yml  release.yml  test.yml
csharp/: .gitignore  Std.UriTemplate.cs  Std.UriTemplate.csproj  Std.UriTemplate.sln  Std.UriTemplate.snk  StdUriTemplate.cs  StdUriTemplate.csproj  init.sh  test.sh
csharp/test/: Program.cs  test.csproj
dart/: .pubignore  analysis_options.yaml  pubspec.yaml  std_uri_template.dart  test.dart  test.sh
dart/example/: main.dart
dart/lib/: std_uritemplate.dart
docs/: index.html
go/: .gitignore  go.mod  go.sum  init.sh  stduritemplate.go  stduritemplate_test.go  test.go  test.sh
go/test/: test.go
go/v2/: go.mod  stduritemplate.go
java/: .gitignore  init.sh  jmh.sh  pom.xml  test.java  test.sh
java/src/main/java/io/github/stduritemplate/: StdUriTemplate.java
java/src/main/java/org/uritemplate/: BenchmarkUriTemplate.java  StdUriTemplate.java  StdUriTemplate2.java  StdUriTemplateNew.java  StdUriTemplateOO.java  UriTemplate.java  UriTemplateMicronaut.java  UriTemplateMicronautWrapper.java
java/src/test/java/: StdUriTemplateTest.java
php/: .gitignore  composer.json  test.php  test.sh
php/src/: StdUriTemplate.php
python/: .gitignore  Readme.md  init.sh  pyproject.toml  test.py  test.sh
python/stduritemplate/: __init__.py
ruby/: Gemfile  init.sh  stduritemplate.gemspec  test.rb  test.sh
ruby/lib/: StdUriTemplate.rb  stduritemplate.rb  test.rb
rust/: Cargo.toml  init.sh  test.sh
rust/src/: lib.rs
rust/test/: Cargo.toml  main.rs
rust/test/src/: main.rs
swift/: .gitignore  Package.swift  init.sh  test.sh
swift/Sources/stduritemplate/: StdUriTemplate.swift
swift/stduritemplate/: Package.swift
swift/stduritemplate/Sources/stduritemplate/: StdUriTemplate.swift
swift/test/: .gitignore  Package.swift
swift/test/Sources/: main.swift
tests/: re-test.sh  test.sh
typescript/: init.sh  package-lock.json  package.json  test.browser.sh  test.cjs.mjs  test.js  test.mjs.mjs  test.sh  tsconfig.base.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json  vite.config.mts  vite.config.ts
typescript-browser/: init.sh  package-lock.json  package.json  test.html  test.js  tsconfig.json
typescript-mjs/: init.sh  test.sh
typescript/scripts/: prepare-dist.mjs
typescript/src/: index.browser.test.ts  index.test.ts  index.ts
uritemplate-test-additional/: edge-cases.json
