[tool.poetry]
name = "std-uritemplate"
version = "0.0.1"
description = "std-uritemplate implementation for Python"
authors = ["Andrea Peruffo <andrea.peruffo1982@gmail.com>"]
readme = "Readme.md"
packages = [{include = "stduritemplate"}]
exclude = [
    { path = "stduritemplate/__pycache__", format=["sdist", "wheel"] },
]
license = "Apache-2.0"
homepage = "https://github.com/std-uritemplate/std-uritemplate"
repository = "https://github.com/std-uritemplate/std-uritemplate"
keywords = ["std-uritemplate", "uritemplate", "uritemplates", "stduritemplate"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
